esp32/legacy/v0.2.1/docs/lcd_wiring.md
# MD024-QVGA-01-V01 与 ESP32-S3 首次测试接线

## 安全前提

- 接线和改线时必须先拔掉 ESP32-S3 的 USB 电源。
- 本模块 LCD 控制器和逻辑电平上限为 3.3V，因此 VCC 接 ESP32 的 `3V3`，不能接 `5V`。
- 厂商规格书将 `BLK` 标为背光阴极，但厂商参考接线图没有连接该引脚；本项目实物验证也确认接 GND 会关闭背光、悬空时背光正常开启。因此当前硬件版本必须让 `BLK` 悬空。
- `CS2` 和 `PEN` 属于触摸部分，本项目屏幕不使用触摸，保持不接。

## 接线表

从屏幕 PCB 正面、排针丝印可读的一侧核对名称，不要只按杜邦线颜色判断。

| 屏幕针脚 | 名称 | ESP32-S3 | 用途 |
|---:|---|---|---|
| 1 | GND | GND | 公共地 |
| 2 | VCC | 3V3 | 模块电源，禁止接 5V |
| 3 | CLK/SCL | GPIO12 | SPI 时钟 |
| 4 | MOSI | GPIO11 | ESP32 向屏幕发送数据 |
| 5 | RES | GPIO14 | 屏幕硬件复位 |
| 6 | DC | GPIO9 | 数据/命令选择 |
| 7 | BLK | 不接 | 模块内部默认开启背光；实物验证接 GND 会关闭背光 |
| 8 | MISO | GPIO13 | 屏幕返回数据，测试程序暂不读取 |
| 9 | CS1 | GPIO10 | LCD 片选 |
| 10 | CS2 | 不接 | 触摸片选，不使用 |
| 11 | PEN | 不接 | 触摸中断，不使用 |

## 上电前复查

1. 万用表确认屏幕 GND 和 ESP32 GND 导通。
2. 确认 VCC 只接 3V3，没有接到 5V/VBUS。
3. 确认 BLK 保持不接，不要接 GND、3V3 或 GPIO。
4. 确认 CS1 接 GPIO10，CS2 保持不接，二者不要混淆。
5. 检查相邻排针之间没有杜邦头偏一位。

## 预期画面

烧录 `v0.2.0` 后应看到：

- 顶部红、绿、蓝、白四色细条；
- `KVM CONTROL` 标题；
- Mac 模拟温度与内存；
- Windows 离线状态；
- 底部 `LCD TEST OK`。

串口应输出：

```text
ILI9341V ready: 240x320, SPI mode 3, 10 MHz
LCD test screen rendered
```

## 故障判断

- 背光不亮：先确认 BLK 已拔掉并保持悬空，再检查 VCC 和 GND，不要先反复烧录。
- 背光亮但全白：重点检查 CLK、MOSI、CS1、DC、RES 是否接错。
- 有图但颜色不对：拍照记录，后续调整 RGB/BGR 或字节顺序。
- 图像旋转或镜像：拍照记录，后续只调整 ILI9341 的 `0x36` 参数。
- 花屏或间歇显示：缩短杜邦线并检查接触；当前 SPI 已保守限制为 10MHz。
